--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@
 /Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
 /Temp/UnityLockfile
 /Temp/UnityTempFile-c6831d48c0fccd34a8ca6efe7a971ce2
+/Assembly-CSharp.csproj
