--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,141 @@
 /Temp/UnityLockfile
 /Temp/UnityTempFile-c6831d48c0fccd34a8ca6efe7a971ce2
 /Assembly-CSharp.csproj
+/Cyber-Warfare-Internet-Evolved.sln
+/Cyber-Warfare-Internet-Evolved.v11.suo
+/Library/CurrentMaximizeLayout.dwlt
+/Library/ShaderCache/0/0823304998c13e7e5751b65b8e051d98.bin
+/Library/ShaderCache/0/0b324fd3f4559b04e97b136632c02b0d.bin
+/Library/ShaderCache/0/0c2ff055fa719c21c4768a8a9bdada63.bin
+/Library/ShaderCache/1/160074e33637ca316790aa68f0cdaa20.bin
+/Library/ShaderCache/1/1894b1ff008f4c44c15135e7d0ece8a5.bin
+/Library/ShaderCache/2/2b1f33d1c5316b7c92497fe9aaa18de6.bin
+/Library/ShaderCache/2/2cb039196a030bdc2c6c3012336ea6a4.bin
+/Library/ShaderCache/3/3587e1e0713bb52e516f5724f3738fcc.bin
+/Library/ShaderCache/3/38d265d95c7fc3adc4e1c915686a8249.bin
+/Library/ShaderCache/3/3ae296289845ee76af72695c3d77969b.bin
+/Library/ShaderCache/4/421bc0426a913e970dd15a314f35d74c.bin
+/Library/ShaderCache/4/458314deb97de4a1a9147874fd09e3c5.bin
+/Library/ShaderCache/4/4d5d37b78627bb4187c03b36b98ef86c.bin
+/Library/ShaderCache/5/500d8411286a6e00db746e2e8fad9450.bin
+/Library/ShaderCache/5/517e9989af766d93539cbeabd68130e8.bin
+/Library/ShaderCache/5/5db885464ec1e3a69a92d2292258a30d.bin
+/Library/ShaderCache/5/5fa5d4ab68e3c654241e51c3e5780c36.bin
+/Library/ShaderCache/6/6d36a688111587e335c2df9b292822f6.bin
+/Library/ShaderCache/7/76264f756aa69a9e0e3548fc4e7a5293.bin
+/Library/ShaderCache/7/76e4ae11c9789bfffe2a54e089c52994.bin
+/Library/ShaderCache/7/7949246477d890bceee391a7f4a72258.bin
+/Library/ShaderCache/8/851246211c3ef424a9a84157f67b0391.bin
+/Library/ShaderCache/8/85722766f581e0d4d0295c24f1b9e418.bin
+/Library/ShaderCache/8/8d81f68efebeb4e7bd9adeccafa62b17.bin
+/Library/ShaderCache/9/934bc155d854f1c59f0007fb96764394.bin
+/Library/ShaderCache/9/94291144264c68756eaa7b241240cbc0.bin
+/Library/ShaderCache/9/976ea39a8327a247e355958ae498a1cc.bin
+/Library/ShaderCache/9/989329924f533b325e50087129bcd153.bin
+/Library/ShaderCache/a/aaa34c08f1feb2eb8d47353edcf578e6.bin
+/Library/ShaderCache/a/ae0dc33b8172be107fe8665f6dab2cab.bin
+/Library/ShaderCache/b/b1a2c2fdcae05620cc705ba1a9aa970e.bin
+/Library/ShaderCache/b/b2c803d6086d433378d2c2be378bd968.bin
+/Library/ShaderCache/b/bc059bf5c2db6a06690edaa475989100.bin
+/Library/ShaderCache/b/bd226a2e8ca352015a7a03c047b0a278.bin
+/Library/ShaderCache/b/be60e342361b8730e8c7cb2a761a0752.bin
+/Library/ShaderCache/c/c70da4db9b283b94a1db88344ff5f0c0.bin
+/Library/ShaderCache/c/cad7534cc14c8366cda52f77a4c9ad95.bin
+/Library/ShaderCache/c/ceb877f6ee62d611933479663c62fa75.bin
+/Library/ShaderCache/d/d1aea84850b803eb4a46598765bb5b69.bin
+/Library/ShaderCache/d/d952a22fb8c41fc9427f9234e2b91e38.bin
+/Library/ShaderCache/d/dbcd17c3a3a8b9bd6ee99e73f9d9b51c.bin
+/Library/ShaderCache/d/dd04df69e4508d0f8826ddbd8ead1c07.bin
+/Library/ShaderCache/e/e0c7d902a0f1a0a3f7b621b64f5b6c44.bin
+/Library/ShaderCache/e/e51aa56939d5337d5ec19cbe4bd4c4cf.bin
+/Library/ShaderCache/f/f1f7c8808e09649066f9d24f78795fce.bin
+/Library/ShaderCache/f/feeabede6f2a9527111a55729dac51e9.bin
+/Library/metadata/13/1349fa1f98c38b44190593a1363bf2a5
+/Library/metadata/13/1349fa1f98c38b44190593a1363bf2a5.info
+/Library/metadata/22/22d2e921b847849419525879393b3d2e
+/Library/metadata/22/22d2e921b847849419525879393b3d2e.info
+/Library/metadata/25/251c6caa190c3b04f84ebc74fea48e0c
+/Library/metadata/25/251c6caa190c3b04f84ebc74fea48e0c.info
+/Library/metadata/2e/2e1f8bc405b8984448d1d9c8fcfda58d
+/Library/metadata/2e/2e1f8bc405b8984448d1d9c8fcfda58d.info
+/Library/metadata/3d/3de64bb9032c4484faa8a09061ce3ee4
+/Library/metadata/3d/3de64bb9032c4484faa8a09061ce3ee4.info
+/Library/metadata/5a/5a9fbe48995dc4045a699ddfedde5751
+/Library/metadata/5a/5a9fbe48995dc4045a699ddfedde5751.info
+/Library/metadata/5e/5e83ed31712907e42ab05e146628fbdd
+/Library/metadata/5e/5e83ed31712907e42ab05e146628fbdd.info
+/Library/metadata/61/6195facbd2628224ca46222c9836eb1b
+/Library/metadata/61/6195facbd2628224ca46222c9836eb1b.info
+/Library/metadata/61/61d30661ad1695841943cbd162cd7172
+/Library/metadata/61/61d30661ad1695841943cbd162cd7172.info
+/Library/metadata/70/70f839d9b59c8634ba4d0a7f6681a8ae
+/Library/metadata/70/70f839d9b59c8634ba4d0a7f6681a8ae.info
+/Library/metadata/74/74fb4c26287285a458fb2a76a5fadfc7
+/Library/metadata/74/74fb4c26287285a458fb2a76a5fadfc7.info
+/Library/metadata/79/792d4556fbfc8f44d8f93cedffd35987
+/Library/metadata/79/792d4556fbfc8f44d8f93cedffd35987.info
+/Library/metadata/7c/7c3894550ced0c94e93be0731601e9a7
+/Library/metadata/7c/7c3894550ced0c94e93be0731601e9a7.info
+/Library/metadata/84/8419b9d0e47214a4792c6db5f17b3ffa
+/Library/metadata/84/8419b9d0e47214a4792c6db5f17b3ffa.info
+/Library/metadata/84/848730d4eca23344eb681a5db37915be
+/Library/metadata/84/848730d4eca23344eb681a5db37915be.info
+/Library/metadata/8a/8a207e4aa9b2a9d48b4b5df1bb660816
+/Library/metadata/8a/8a207e4aa9b2a9d48b4b5df1bb660816.info
+/Library/metadata/8e/8e6f3ed98b8bccf4a8b78f21a2567618
+/Library/metadata/8e/8e6f3ed98b8bccf4a8b78f21a2567618.info
+/Library/metadata/9a/9afd47a3bd1b3b545aa16a62bc614d88
+/Library/metadata/9a/9afd47a3bd1b3b545aa16a62bc614d88.info
+/Library/metadata/9e/9e619ad1fa54d4a4f8398143bc6088f0
+/Library/metadata/9e/9e619ad1fa54d4a4f8398143bc6088f0.info
+/Library/metadata/a9/a9de15492462cec4bb0e56e29079bb1e
+/Library/metadata/a9/a9de15492462cec4bb0e56e29079bb1e.info
+/Library/metadata/b0/b02ae01fb77886c429c72e8095ebe1c1
+/Library/metadata/b0/b02ae01fb77886c429c72e8095ebe1c1.info
+/Library/metadata/b1/b1f86e655f5e6274fb99e32b6b6c4da4
+/Library/metadata/b1/b1f86e655f5e6274fb99e32b6b6c4da4.info
+/Library/metadata/bb/bbcd9109a09585b4083430181af80e44
+/Library/metadata/bb/bbcd9109a09585b4083430181af80e44.info
+/Library/metadata/c4/c4e36216c7e86fb42b25f212194cf42a
+/Library/metadata/c4/c4e36216c7e86fb42b25f212194cf42a.info
+/Library/metadata/c9/c9c7f18df2fc9b444beddf682d11efc9
+/Library/metadata/c9/c9c7f18df2fc9b444beddf682d11efc9.info
+/Library/metadata/d6/d6c1608d448acc141b639d89effe8235
+/Library/metadata/d6/d6c1608d448acc141b639d89effe8235.info
+/Library/metadata/e2/e27468af42d08d640ba34b9cc2a813c6
+/Library/metadata/e2/e27468af42d08d640ba34b9cc2a813c6.info
+/Library/metadata/e8/e88e0df441a85ca49933a345a688102d
+/Library/metadata/e8/e88e0df441a85ca49933a345a688102d.info
+/Library/metadata/ec/ecafd3da2130d904287f9ed060db9a13
+/Library/metadata/ec/ecafd3da2130d904287f9ed060db9a13.info
+/Library/metadata/ed/eda48002d21797241be5fbfd1ec012aa
+/Library/metadata/ed/eda48002d21797241be5fbfd1ec012aa.info
+/Library/metadata/f8/f83e2b4821d0ae94fa5fd703b0deaca4
+/Library/metadata/f8/f83e2b4821d0ae94fa5fd703b0deaca4.info
+/Library/metadata/f8/f8f4f1be241ea1f448810a8c414f9853
+/Library/metadata/f8/f8f4f1be241ea1f448810a8c414f9853.info
+/Temp/UnityTempFile-8f40bc0d79bd0074a9c9cca13f6b3eae
+/Temp/__Backupscenes/0.backup
+/Temp/bin/Debug/Assembly-CSharp.dll
+/Temp/bin/Debug/Assembly-CSharp.pdb
+/Temp/bin/Debug/ICSharpCode.NRefactory.dll
+/Temp/bin/Debug/Mono.Cecil.Mdb.dll
+/Temp/bin/Debug/Mono.Cecil.Pdb.dll
+/Temp/bin/Debug/Mono.Cecil.dll
+/Temp/bin/Debug/Unity.CecilTools.dll
+/Temp/bin/Debug/Unity.DataContract.dll
+/Temp/bin/Debug/Unity.SerializationLogic.dll
+/Temp/bin/Debug/Unity.UNetWeaver.dll
+/Temp/bin/Debug/UnityEditor.dll
+/Temp/bin/Debug/UnityEditor.xml
+/Temp/bin/Debug/UnityEngine.Networking.dll
+/Temp/bin/Debug/UnityEngine.Networking.xml
+/Temp/bin/Debug/UnityEngine.UI.dll
+/Temp/bin/Debug/UnityEngine.UI.xml
+/Temp/bin/Debug/UnityEngine.dll
+/Temp/bin/Debug/UnityEngine.xml
+/obj/Debug/Assembly-CSharp.csproj.FileListAbsolute.txt
+/obj/Debug/Assembly-CSharp.csprojResolveAssemblyReference.cache
+/obj/Debug/Assembly-CSharp.dll
+/obj/Debug/Assembly-CSharp.pdb
+/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
