Updated camera scrips and movement stuff + new test unit

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,29 @@
 /obj/Debug/Assembly-CSharp.dll
 /obj/Debug/Assembly-CSharp.pdb
 /obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/Library/ShaderCache/8/882a3f646c5d6233fbe8be3715a83405.bin
+/Library/ShaderCache/e/e069198bd6a056cc48703ee09e73988e.bin
+/Library/metadata/34/34525441fd81ea64bb5aa16d077c8292
+/Library/metadata/34/34525441fd81ea64bb5aa16d077c8292.info
+/Library/metadata/38/38d405c119fcc7c4e83d4a478a40ff2f
+/Library/metadata/38/38d405c119fcc7c4e83d4a478a40ff2f.info
+/Library/metadata/49/497f2067b8aac4f40bc2a4b689c75c52
+/Library/metadata/49/497f2067b8aac4f40bc2a4b689c75c52.info
+/Library/metadata/4a/4ad02dc83da735c4e8d945332b9202f6
+/Library/metadata/4a/4ad02dc83da735c4e8d945332b9202f6.info
+/Temp/TarGZ/archtemp.tar
+/Temp/UnityTempFile-3a8fd2e4770b3fe49afe8132f5240c61
+/Temp/UnityTempFile-46897722ca798b44db189d96a9ae7793
+/Temp/UnityTempFile-51c906ff09d2d934b8c74655003b18c7
+/Temp/UnityTempFile-6d58a26edd63a544798abe99c887865c
+/Temp/UnityTempFile-8fac4cfd1aec1224db6b56095a09ae01
+/Temp/UnityTempFile-df66e0cba7e58014e829e924618fbe91
+/Temp/UnityTempFile-f409989bfb5ddda489845b27ebc21266
+/Temp/UnityTempFile-ff661445a1463b946800c7cf11409591
+/Assets/UnityVS.meta
+/Assets/UnityVS/Editor.meta
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
+/Temp/UnityTempFile-089b75ff9be56614c92150c8340f3a34
