New way of handling box drag + resources now "WORK". ians other models.

--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,148 @@
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
 /Temp/UnityTempFile-089b75ff9be56614c92150c8340f3a34
+/Library/ShaderCache/c/cd2ddcfdb1ef6183b7046f8b0b63fcbd.bin
+/Library/ShaderCache/d/d63c614cf6d210acf4c7303c868a79c3.bin
+/Library/metadata/02/029a76bbfa4a4d747b57900ebd10e9c5
+/Library/metadata/02/029a76bbfa4a4d747b57900ebd10e9c5.info
+/Library/metadata/0b/0b96b6736aaf59b4ab59355a31299ac9
+/Library/metadata/0b/0b96b6736aaf59b4ab59355a31299ac9.info
+/Library/metadata/10/101b4000192c9dd428ed8e518096f588
+/Library/metadata/10/101b4000192c9dd428ed8e518096f588.info
+/Library/metadata/11/11e1646d33dbfb849a94b6ac3f05e673
+/Library/metadata/11/11e1646d33dbfb849a94b6ac3f05e673.info
+/Library/metadata/16/1609233536563fd439f134a84fb7dfc5
+/Library/metadata/16/1609233536563fd439f134a84fb7dfc5.info
+/Library/metadata/25/25c70221d73488b419607d6d8e471597
+/Library/metadata/25/25c70221d73488b419607d6d8e471597.info
+/Library/metadata/26/26beefb5001830e418a090eab8b8fae4
+/Library/metadata/26/26beefb5001830e418a090eab8b8fae4.info
+/Library/metadata/26/26c61c2a1c1405b47b362b455a7de73f
+/Library/metadata/26/26c61c2a1c1405b47b362b455a7de73f.info
+/Library/metadata/32/3205d712a05fd844684887fc5ea9d45f
+/Library/metadata/32/3205d712a05fd844684887fc5ea9d45f.info
+/Library/metadata/32/32408794d91652f4ba7e5c41fa32f705
+/Library/metadata/32/32408794d91652f4ba7e5c41fa32f705.info
+/Library/metadata/39/394e08e533527e0488f95139423c8402
+/Library/metadata/39/394e08e533527e0488f95139423c8402.info
+/Library/metadata/45/45d0a2d0b5ef0d84782500cd02fd57ac
+/Library/metadata/45/45d0a2d0b5ef0d84782500cd02fd57ac.info
+/Library/metadata/49/4995a2fd9118e024890c0d20d7d6b921
+/Library/metadata/49/4995a2fd9118e024890c0d20d7d6b921.info
+/Library/metadata/4b/4b7c37c7e3fb12149817eed493678e38
+/Library/metadata/4b/4b7c37c7e3fb12149817eed493678e38.info
+/Library/metadata/4d/4dedc8ab24c4c8942b4c1eac912d7728
+/Library/metadata/4d/4dedc8ab24c4c8942b4c1eac912d7728.info
+/Library/metadata/4f/4f26f8d4da2e7354b8511cd419645e91
+/Library/metadata/4f/4f26f8d4da2e7354b8511cd419645e91.info
+/Library/metadata/52/520219b34bf0ddb4d8d13a44dccacc8b
+/Library/metadata/52/520219b34bf0ddb4d8d13a44dccacc8b.info
+/Library/metadata/59/59a423f35aa9a16488a12f615364920f
+/Library/metadata/59/59a423f35aa9a16488a12f615364920f.info
+/Library/metadata/5a/5adfb012ef1fc1b498f56b793cea9460
+/Library/metadata/5a/5adfb012ef1fc1b498f56b793cea9460.info
+/Library/metadata/7b/7bc52345bc7562045a363ef37dfe43ee
+/Library/metadata/7b/7bc52345bc7562045a363ef37dfe43ee.info
+/Library/metadata/83/83d89a8b4480dc546a585c7d520af7dc
+/Library/metadata/83/83d89a8b4480dc546a585c7d520af7dc.info
+/Library/metadata/85/856419e76ae600a46a98001e381e25a6
+/Library/metadata/85/856419e76ae600a46a98001e381e25a6.info
+/Library/metadata/8f/8ff6ef77a8aba424ea8ef39d48e0bbff
+/Library/metadata/8f/8ff6ef77a8aba424ea8ef39d48e0bbff.info
+/Library/metadata/98/988b723dbbe579a4a892e1af994c6532
+/Library/metadata/98/988b723dbbe579a4a892e1af994c6532.info
+/Library/metadata/9e/9ee44c6ce6790e44093c6401054def92
+/Library/metadata/9e/9ee44c6ce6790e44093c6401054def92.info
+/Library/metadata/9f/9fe81237caeeda4488311b1a3fe989f4
+/Library/metadata/9f/9fe81237caeeda4488311b1a3fe989f4.info
+/Library/metadata/b1/b1ef09e61ed64af44bcfe901ed64b31f
+/Library/metadata/b1/b1ef09e61ed64af44bcfe901ed64b31f.info
+/Library/metadata/b2/b2528ea7593d96d41908434bc1239436
+/Library/metadata/b2/b2528ea7593d96d41908434bc1239436.info
+/Library/metadata/bb/bb8adf68c9acf994b946fe45f923b95f
+/Library/metadata/bb/bb8adf68c9acf994b946fe45f923b95f.info
+/Library/metadata/d1/d1203eb35819e1c4592954eec43a1dc9
+/Library/metadata/d1/d1203eb35819e1c4592954eec43a1dc9.info
+/Library/metadata/da/dacfc3e947ffec644983d60374f99f32
+/Library/metadata/da/dacfc3e947ffec644983d60374f99f32.info
+/Library/metadata/e4/e4bd4cc4f15607f489936ed06c3d162c
+/Library/metadata/e4/e4bd4cc4f15607f489936ed06c3d162c.info
+/Library/metadata/e4/e4f5961f729d40b45b456fba50c746d1
+/Library/metadata/e4/e4f5961f729d40b45b456fba50c746d1.info
+/Library/metadata/e7/e7d8063b2f6a5fe42b6ec6d3aa5e8a37
+/Library/metadata/e7/e7d8063b2f6a5fe42b6ec6d3aa5e8a37.info
+/Library/metadata/f3/f37796ae245b285499aa9d9a25c9da3e
+/Library/metadata/f3/f37796ae245b285499aa9d9a25c9da3e.info
+/Library/metadata/f6/f616dc41870d45c4e91b69661e017be3
+/Library/metadata/f6/f616dc41870d45c4e91b69661e017be3.info
+/Library/metadata/fa/fae56fbf5857b994e84dbc01e4b5815d
+/Library/metadata/fa/fae56fbf5857b994e84dbc01e4b5815d.info
+/ProjectSettings/AudioManager.asset
+/ProjectSettings/ClusterInputManager.asset
+/ProjectSettings/DynamicsManager.asset
+/ProjectSettings/EditorBuildSettings.asset
+/ProjectSettings/EditorSettings.asset
+/ProjectSettings/GraphicsSettings.asset
+/ProjectSettings/InputManager.asset
+/ProjectSettings/NavMeshAreas.asset
+/ProjectSettings/NetworkManager.asset
+/ProjectSettings/Physics2DSettings.asset
+/ProjectSettings/ProjectVersion.txt
+/ProjectSettings/QualitySettings.asset
+/ProjectSettings/TimeManager.asset
+/ProjectSettings/UnityAdsSettings.asset
+/ProjectSettings/UnityConnectSettings.asset
+/Temp/UnityTempFile-0419756ed175eee44aa8a67c28258981
+/Temp/UnityTempFile-04661de1bfa12304887d542468f6c28f
+/Temp/UnityTempFile-048ac41b7e32ef241ad75d6e335e9079
+/Temp/UnityTempFile-09d2e0b2c0ec32d41a1334b0c8bda98f
+/Temp/UnityTempFile-0b591532dac779e47a6a077e2b90b867
+/Temp/UnityTempFile-0e378b9f539b6c24483ae60c2c816f60
+/Temp/UnityTempFile-1830b8c29365f4a409c074bc36e8d86e
+/Temp/UnityTempFile-1d0d4cee9466e4a459b476d92c35303b
+/Temp/UnityTempFile-2b079f7423c7971458763333d575c421
+/Temp/UnityTempFile-2cd8d847c1a2ec54db369c090d883772
+/Temp/UnityTempFile-3048e88d7209ac845ad10883b0816226
+/Temp/UnityTempFile-39aeff82ccdd50749ac4b6493c68706a
+/Temp/UnityTempFile-3d13b90361e715d4b9b9ddeae2c230c4
+/Temp/UnityTempFile-3d2cac28dfd852342a20d12dd0dd6ee5
+/Temp/UnityTempFile-430702d71e20ad3469576e01c74acdad
+/Temp/UnityTempFile-43fde6f142ab3774b9e3baf2a61acaf1
+/Temp/UnityTempFile-49875ef6fd492ed40933cb1b687d4001
+/Temp/UnityTempFile-4a4f5d0d929bd9a478fa92371e7e31da
+/Temp/UnityTempFile-4a59f508330a5b94eb62060e25b343eb
+/Temp/UnityTempFile-54671e8bb99410249accb9a253f8595f
+/Temp/UnityTempFile-5d2a8084979413d4db11ed64e6a41198
+/Temp/UnityTempFile-62b3ed30c92e55943b46ad848288a487
+/Temp/UnityTempFile-6809b34c06957404d8240021124a4845
+/Temp/UnityTempFile-6dc6a0354a78439429396d461757413e
+/Temp/UnityTempFile-7048691f2e7a12042a3a9b47cbb62ee2
+/Temp/UnityTempFile-72f9a8f608bed65499bc72cb4d0632b1
+/Temp/UnityTempFile-75813961985264d4f9bf2b27fadfc7a6
+/Temp/UnityTempFile-7db4facf8a11b2541aa3d85b347cb939
+/Temp/UnityTempFile-81e487c14176fc34e9d0beefce4c2a7a
+/Temp/UnityTempFile-84bb927774f84664cbcbdaa1dbda7897
+/Temp/UnityTempFile-8565bca8bc8410f4198d0d57fceab9b5
+/Temp/UnityTempFile-8e2476e5abcd4694082846836226d8ba
+/Temp/UnityTempFile-956d7957987ca48439c0bdc12f45aaae
+/Temp/UnityTempFile-9ad36bf5dce47514983fc76363ad544b
+/Temp/UnityTempFile-a57029d41029c9348a51e1ed1ddac975
+/Temp/UnityTempFile-ac89f7f411b8cd54db1ab6b74de93357
+/Temp/UnityTempFile-af350c2b45a1c684685d50f16c0275aa
+/Temp/UnityTempFile-b01fa94c3c140b745a40cf6169b9d892
+/Temp/UnityTempFile-b07e17549e5086d4795a0695cea8993c
+/Temp/UnityTempFile-b4d28ff69ed3d6d47baae16583568d95
+/Temp/UnityTempFile-bebc16f9de4805a4285c2e71539db48c
+/Temp/UnityTempFile-c091fe4e6c22b134bb31c29a731922a4
+/Temp/UnityTempFile-c492698091ac21c469bc9fec745cc4dd
+/Temp/UnityTempFile-c4b5b53c2df6c1a4cb638f528089db6d
+/Temp/UnityTempFile-c6b4565771a994843a15eaddc4bd5f3e
+/Temp/UnityTempFile-cae4cf4cedade384db24d54fcfd7ad4a
+/Temp/UnityTempFile-d39b019e0a397eb44a99bdbd18dec8af
+/Temp/UnityTempFile-df5349338c71693479ebfc42ea2d77a9
+/Temp/UnityTempFile-e11e0812435f1914d99075d079791ac3
+/Temp/UnityTempFile-e472a75c0a1d32d49a2ad580db06f2ac
+/Temp/UnityTempFile-e51cd18074e8cdc40963fd235efe19bf
+/Temp/UnityTempFile-e590c2e4356e8d54eb51ea7ab7a1b5c5
+/Temp/UnityTempFile-ee632ef87b0a90144bad44753d35695b
+/Temp/UnityTempFile-f45edf3237b5cac479dbc173e0bf4aae
