New Menu + box collider for gas building.

--- a/.gitignore
+++ b/.gitignore
@@ -446,3 +446,39 @@
 /Temp/UnityTempFile-e590c2e4356e8d54eb51ea7ab7a1b5c5
 /Temp/UnityTempFile-ee632ef87b0a90144bad44753d35695b
 /Temp/UnityTempFile-f45edf3237b5cac479dbc173e0bf4aae
+/Library/CrashedAssetImports.txt
+/Library/metadata/0c/0c2bc3172bd021444a3fbe5b12237de4
+/Library/metadata/0c/0c2bc3172bd021444a3fbe5b12237de4.info
+/Library/metadata/6d/6d00105f984a44643b4e8d043fd286eb
+/Library/metadata/6d/6d00105f984a44643b4e8d043fd286eb.info
+/Library/metadata/7d/7de35f14c12784a4cba8ec714b8d14d5
+/Library/metadata/7d/7de35f14c12784a4cba8ec714b8d14d5.info
+/Library/metadata/94/9459afd106caa874d87ad85a724e25ab
+/Library/metadata/94/9459afd106caa874d87ad85a724e25ab.info
+/Library/metadata/bf/bfef4bfc13584c44e866d0b770c04d43
+/Library/metadata/bf/bfef4bfc13584c44e866d0b770c04d43.info
+/Library/metadata/cb/cb3ea4be0e3e9c946a093e1b9c3d2bf9
+/Library/metadata/cb/cb3ea4be0e3e9c946a093e1b9c3d2bf9.info
+/Temp/UnityTempFile-171854f72e75f174d9e9b9e4a44dc280
+/Temp/UnityTempFile-19ebde4de80530c458a1affc09cd5b6a
+/Temp/UnityTempFile-206c34f18c1aa4642a0fb7e0ba0f81bb
+/Temp/UnityTempFile-2a5a77d37f1d8924280010f8e1926ae8
+/Temp/UnityTempFile-45239aa9c28811a4aa75a8a8b003b053
+/Temp/UnityTempFile-4d3a345050742264da7a247a817727c3
+/Temp/UnityTempFile-5455f484cc12ea644a7cf5ce8deb5ba0
+/Temp/UnityTempFile-54def5ec25274d84480b9f7a5f42b2c1
+/Temp/UnityTempFile-6577d6ae117374849a93b285e90bbd10
+/Temp/UnityTempFile-72ca600692296634d85676948ebeb00e
+/Temp/UnityTempFile-763849e5cc82b67438f6a92ba8903b78
+/Temp/UnityTempFile-83c206731f8fc554b8b66072898c1fb1
+/Temp/UnityTempFile-a5e3e651ca6c2864dac89cfc27de282b
+/Temp/UnityTempFile-b2f42a83aae95394b8e95ef7604b153f
+/Temp/UnityTempFile-b2fd72e2138d37f4da5a4a2722652060
+/Temp/UnityTempFile-c0c8182ed80414349ba2dd8c0920b0cb
+/Temp/UnityTempFile-c1bc772d0d301f043aa59115c287c442
+/Temp/UnityTempFile-c2bc12e9114a2ac43830c645d463249b
+/Temp/UnityTempFile-cb33404c0abf2034ba25e9a36bbf35ef
+/Temp/UnityTempFile-d08566adaf04cfe4e8571b4caf91efc2
+/Temp/UnityTempFile-e67d4a5f212268e4c8f8f4594b37da1f
+/Temp/UnityTempFile-e835235f6e6051949969ba580ffe7afe
+/Temp/UnityTempFile-ec19be13d64104f4c914fbb8a5b304c3
