Menu Scripts and what not.

--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,19 @@
 /Temp/UnityTempFile-e67d4a5f212268e4c8f8f4594b37da1f
 /Temp/UnityTempFile-e835235f6e6051949969ba580ffe7afe
 /Temp/UnityTempFile-ec19be13d64104f4c914fbb8a5b304c3
+/Library/metadata/7e/7e638171a4c789c48850b229da5ba2ac
+/Library/metadata/7e/7e638171a4c789c48850b229da5ba2ac.info
+/Library/metadata/cb/cb5c320a5932fa041a7fca7393c466f5
+/Library/metadata/cb/cb5c320a5932fa041a7fca7393c466f5.info
+/Library/metadata/eb/eb5ce7dfc3f0b7442bdf57918b523610
+/Library/metadata/eb/eb5ce7dfc3f0b7442bdf57918b523610.info
+/Temp/UnityTempFile-01e07e3a46696e5488c5f1f0230ed8d0
+/Temp/UnityTempFile-13a2c6adc09e16c408af95acc28a30ec
+/Temp/UnityTempFile-231c4d7fce2c19f409d66fcdceaf874d
+/Temp/UnityTempFile-452b52b2dca8af448ad5c206943bd828
+/Temp/UnityTempFile-4b7174fdfd24e5549beadf9a8d027ffb
+/Temp/UnityTempFile-65b40a8d667ff664daf4d05ff08be33b
+/Temp/UnityTempFile-a3b04eb3f748c7046831a5b4cbdb5c3e
+/Temp/UnityTempFile-a81086ca4d8c47040bdb68979ed37d13
+/Temp/UnityTempFile-d51c049c9d2299343b847cadd31047fb
+/Temp/UnityTempFile-f54bd3818a9779f489c19ab2ebdfb309
