More progress fam.

--- a/.gitignore
+++ b/.gitignore
@@ -498,3 +498,15 @@
 /Temp/UnityTempFile-a81086ca4d8c47040bdb68979ed37d13
 /Temp/UnityTempFile-d51c049c9d2299343b847cadd31047fb
 /Temp/UnityTempFile-f54bd3818a9779f489c19ab2ebdfb309
+/Library/metadata/31/31565dff0cb83754f9af52ed0c84519c
+/Library/metadata/31/31565dff0cb83754f9af52ed0c84519c.info
+/Temp/UnityTempFile-07fc41572d71e9149ac042d2b7b9c080
+/Temp/UnityTempFile-1acf64f2a73bf6b448c396bd7c5e90e7
+/Temp/UnityTempFile-1b8910dab8f78114496045e23e6b8f4f
+/Temp/UnityTempFile-22d7fbf6f2383a846a8f411ef012b695
+/Temp/UnityTempFile-5d0b80b646e816542be83a01d3b359b7
+/Temp/UnityTempFile-6bc565c3717459c4db99f76ef52f0b84
+/Temp/UnityTempFile-78cb03bbccc3c574e8179dbeab8d5c94
+/Temp/UnityTempFile-99cb69e5e4b1efd47996c7d0c327cf76
+/Temp/UnityTempFile-9ae5a20fb1769a645afd0d3ce4b94d69
+/Temp/UnityTempFile-cf304bb5ca5fe9d4282a847579a2fd42
