Changed test unit to worker prefab. Changed ray.

--- a/.gitignore
+++ b/.gitignore
@@ -4183,3 +4183,9 @@
 /Test1_Data/sharedassets1.assets
 /player_win_x86.pdb
 /player_win_x86_s.pdb
+/Temp/UnityTempFile-37ba3291b2a87724cb036b2dd5272905
+/Temp/UnityTempFile-56482b8097581824895d55baa63ad7b5
+/Temp/UnityTempFile-83b00134df4f5914f895d9b4975ba62b
+/Temp/UnityTempFile-8aebeed8c51828f42b5c71f1193a4fee
+/Temp/UnityTempFile-8c57b2cfffdb29c4fb64eec15236ee3e
+/Temp/UnityTempFile-e42843eb38fd74c429cb415505f0f5a2
