Updated placements of buildings and what not

--- a/.gitignore
+++ b/.gitignore
@@ -4189,3 +4189,19 @@
 /Temp/UnityTempFile-8aebeed8c51828f42b5c71f1193a4fee
 /Temp/UnityTempFile-8c57b2cfffdb29c4fb64eec15236ee3e
 /Temp/UnityTempFile-e42843eb38fd74c429cb415505f0f5a2
+/Library/metadata/0f/0f7572df2b2299143bc892f07127883e
+/Library/metadata/0f/0f7572df2b2299143bc892f07127883e.info
+/Library/metadata/24/24b6c342b30bf984fb65b89b80964297
+/Library/metadata/24/24b6c342b30bf984fb65b89b80964297.info
+/Library/metadata/46/465492f7d87985f4c8dac8ddd2e83404
+/Library/metadata/46/465492f7d87985f4c8dac8ddd2e83404.info
+/Library/metadata/47/47b1b93e3b2025f4090b3e2f8da7c71a
+/Library/metadata/47/47b1b93e3b2025f4090b3e2f8da7c71a.info
+/Library/metadata/54/545306e31e354b848a708847be7826b8
+/Library/metadata/54/545306e31e354b848a708847be7826b8.info
+/Library/metadata/af/af6cace12e25e544891c466789aeb1d0
+/Library/metadata/af/af6cace12e25e544891c466789aeb1d0.info
+/Library/metadata/be/be59e361beda860468b6279930bff8d8
+/Library/metadata/be/be59e361beda860468b6279930bff8d8.info
+/Library/metadata/d7/d70c6f0da5221364c9238acbb073dfc6
+/Library/metadata/d7/d70c6f0da5221364c9238acbb073dfc6.info
