BuildingManager updated so that it wont create an instantiated object UNTIL you have the actual placement stuff

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,70 @@ Build
 *.pibd.meta
 
 sysinfo.txt
+/Assets/UnityVS.meta
+/Assets/UnityVS/Editor.meta
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
+/Cyber-Warfare-Internet-Evolved.v11.suo
+/Test1.exe
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.caw
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.ecm
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.iws.sse
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.rgb
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.rsc.sse
+/Test1_Data/GI/level1/17/178688f6d21198191f3d581689e9e553.vis
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.caw
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.ecm
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.iws.sse
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.rgb
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.rsc.sse
+/Test1_Data/GI/level1/4b/4bd84b51cd16307d3a1146feda0e58f4.vis
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.caw
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.ecm
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.iws.sse
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.rgb
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.rsc.sse
+/Test1_Data/GI/level1/50/50236e10d55a35435ca26219442a5d22.vis
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.caw
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.ecm
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.iws.sse
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.rgb
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.rsc.sse
+/Test1_Data/GI/level1/60/6077195c20ba624cc0a7af8248e35a94.vis
+/Test1_Data/Managed/Assembly-CSharp.dll
+/Test1_Data/Managed/Mono.Security.dll
+/Test1_Data/Managed/System.Core.dll
+/Test1_Data/Managed/System.dll
+/Test1_Data/Managed/UnityEngine.Networking.dll
+/Test1_Data/Managed/UnityEngine.UI.dll
+/Test1_Data/Managed/UnityEngine.dll
+/Test1_Data/Managed/UnityEngine.dll.mdb
+/Test1_Data/Managed/mscorlib.dll
+/Test1_Data/Mono/etc/mono/1.0/DefaultWsdlHelpGenerator.aspx
+/Test1_Data/Mono/etc/mono/1.0/machine.config
+/Test1_Data/Mono/etc/mono/2.0/Browsers/Compat.browser
+/Test1_Data/Mono/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+/Test1_Data/Mono/etc/mono/2.0/machine.config
+/Test1_Data/Mono/etc/mono/2.0/settings.map
+/Test1_Data/Mono/etc/mono/2.0/web.config
+/Test1_Data/Mono/etc/mono/browscap.ini
+/Test1_Data/Mono/etc/mono/config
+/Test1_Data/Mono/etc/mono/mconfig/config.xml
+/Test1_Data/Mono/mono.dll
+/Test1_Data/Resources/unity default resources
+/Test1_Data/Resources/unity_builtin_extra
+/Test1_Data/globalgamemanagers
+/Test1_Data/globalgamemanagers.assets
+/Test1_Data/level0
+/Test1_Data/level1
+/Test1_Data/level1.resS
+/Test1_Data/output_log.txt
+/Test1_Data/resources.assets
+/Test1_Data/resources.assets.resS
+/Test1_Data/sharedassets0.assets
+/Test1_Data/sharedassets0.assets.resS
+/Test1_Data/sharedassets1.assets
+/player_win_x86.pdb
+/player_win_x86_s.pdb
